--- a/serverless.yml
+++ b/serverless.yml
@@ -5,17 +5,15 @@ provider:
   name: aws
   runtime: nodejs12.x
   region: eu-west-1
+  logs:
+    httpApi: true
 
 plugins:
   - serverless-webpack
   - serverless-offline
 
 functions:
-  hello:
+  api:
     handler: src/index.handler
     events:
-      # - http: GET hello
-      # - httpApi:
-      #     method: GET
-      #     path: /
       - httpApi: '*'
